# script_download_video

./: .editorconfig  .gitattributes  .gitignore  .gitmessage  README.md  build_app.py  main.py  pyproject.toml  requirements.txt  ruff.toml
.claude/: settings.json
.githooks/: commit-msg  pre-commit  pre-push
.github/workflows/: ci.yml  release.yml
docs/CHANGELOG/: v0.1.0.md  v0.1.1.md  v0.2.0.md
docs/scripts/: release.py  setup.py
video_downloader/: __init__.py  downloader.py  extractor.py  gui.py
